--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group 'com.opsgenie.tools'
-version '0.1.0-SNAPSHOT'
+version '0.1.0'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
