--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,15 @@ task sourcesJar(type: Jar) {
 }
 
 
+task javadocJar(type: Jar, dependsOn: 'javadoc') {
+    classifier 'javadoc'
+    from javadoc.destinationDir
+}
+
+
 artifacts {
     archives sourcesJar
+    archives javadocJar
 }
 
 signing {
