--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ targetCompatibility = 1.6
 
 repositories {
     mavenCentral()
+    mavenLocal()
     jcenter()
 }
 
@@ -26,7 +27,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:2.7'
     compile "com.beust:jcommander:1.48"
     compile 'org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r'
-    compile "com.opsgenie.integration:sdk-shaded:2.6.1"
+    compile "com.opsgenie.client:java-sdk:1.0.0"
     compile "org.slf4j:slf4j-simple:1.7.5"
 }
 
