--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group 'com.opsgenie.tools'
-version '0.7.0'
+version '0.8.0'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -22,7 +22,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:2.7'
     compile "com.beust:jcommander:1.48"
     compile 'org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r'
-    compile "com.opsgenie.client:java-sdk:1.0.0"
+    compile "com.opsgenie.oas:opsgenie-sdk-swagger:1.0.0"
     compile "org.slf4j:slf4j-simple:1.7.5"
 }
 
