--- a/backup-commons/build.gradle
+++ b/backup-commons/build.gradle
@@ -17,12 +17,12 @@ apply plugin: 'java'
 apply plugin: 'project-report'
 
 dependencies {
-    compile 'org.apache.logging.log4j:log4j:2.9.1'
+    compile 'org.apache.logging.log4j:log4j-api:2.9.1'
     compile 'org.apache.logging.log4j:log4j-core:2.9.1'
+    compile "org.apache.logging.log4j:log4j-slf4j-impl:2.9.1"
     compile "com.beust:jcommander:1.48"
     compile 'org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r'
     compile "com.opsgenie.oas:opsgenie-sdk-swagger:1.0.1"
-    compile "org.slf4j:slf4j-simple:1.7.25"
 }
 
 jar {
