--- a/backup-export/build.gradle
+++ b/backup-export/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 task exportUtilJar(type: Jar) {
+    group 'package'
     manifest {
         attributes("Built-By": "http://www.opsgenie.com",
                 "Specification-Title": "OpsGenie Configuration Backup Tool",
