--- a/backup-export/build.gradle
+++ b/backup-export/build.gradle
@@ -14,6 +14,23 @@ repositories {
     mavenCentral()
 }
 
+project.ext {
+    aspectjVersion = '1.8.12'
+}
+
+apply plugin: "aspectj"
+
+buildscript {
+    repositories {
+        maven {
+            url "https://maven.eveoh.nl/content/repositories/releases"
+        }
+    }
+    dependencies {
+        classpath "nl.eveoh:gradle-aspectj:1.5"
+    }
+}
+
 task exportUtilJar(type: Jar) {
     group 'package'
     manifest {
